feat(i18n): add English
Resolves #157.

--- a/nuxt/locales/de.json
+++ b/nuxt/locales/de.json
@@ -4,6 +4,6 @@
   "globalOgSeoDescription": "TrapPartys Online-Version.",
   "globalStatusError": "Fehler",
   "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
-  "globalValidationFormatIncorrect": "Falsches Format.",
-  "globalValidationRequired": "Pflichtfeld."
+  "globalValidationFormatIncorrect": "Falsches Format",
+  "globalValidationRequired": "Pflichtfeld"
 }
