chore(deps): migrate to nuxt-seo-kit

--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,7 +1,7 @@
 {
   "globalLoading": "Loading...",
   "globalOgImageAlt": "TrapParty's logo.",
-  "globalOgSeoDescription": "TrapParty's online version",
+  "globalOgSeoDescription": "TrapParty's online version.",
   "globalStatusError": "Error",
   "globalValidationFailed": "Please check your input 🙈",
   "globalValidationFormatIncorrect": "Incorrect format",
