refactor(locales): rename

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,7 +1,7 @@
 {
-  "globalLoading": "Lade...",
-  "globalOgImageAlt": "TrapPartys Logo.",
-  "globalOgSeoDescription": "TrapPartys Online-Version.",
+  "globalStatusLoading": "Lade...",
+  "globalSeoOgImageAlt": "TrapPartys Logo.",
+  "globalSeoSiteDescription": "TrapPartys Online-Version.",
   "globalStatusError": "Fehler",
   "globalValidationFailed": "Bitte überprüfe deine Eingaben 🙈",
   "globalValidationFormatIncorrect": "Falsches Format",
