--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,9 +1,4 @@
 {
-  "globalStatusLoading": "Loading...",
   "globalSeoOgImageAlt": "TrapParty's logo.",
-  "globalSeoSiteDescription": "TrapParty's online version.",
-  "globalStatusError": "Error",
-  "globalValidationFailed": "Please check your input 🙈",
-  "globalValidationFormatIncorrect": "Incorrect format",
-  "globalValidationRequired": "Required"
+  "globalSeoSiteDescription": "TrapParty's online version."
 }
