fix(og-image): correct locales

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,4 +1,6 @@
 {
   "globalSeoOgImageAlt": "TrapPartys Logo.",
-  "globalSeoSiteDescription": "TrapPartys Online-Version."
+  "nuxtSiteConfig": {
+    "description": "TrapPartys Online-Version."
+  }
 }
