chore(locales): add global validation translation

--- a/src/locales/de.json
+++ b/src/locales/de.json
@@ -1,5 +1,6 @@
 {
   "globalSeoOgImageAlt": "TrapPartys Logo.",
+  "globalValidationFormatIncorrect": "Falsches Format",
   "nuxtSiteConfig": {
     "description": "TrapPartys Online-Version."
   }
