--- a/src/locales/en.json
+++ b/src/locales/en.json
@@ -1,5 +1,6 @@
 {
   "globalSeoOgImageAlt": "TrapParty's logo.",
+  "globalValidationFormatIncorrect": "Incorrect format",
   "nuxtSiteConfig": {
     "description": "TrapParty's online version."
   }
